kubernetes/demo/Devops/jenkins/jenkinszh/jenkinszh-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jenkinszh
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkinszh
  template:
    metadata:
      labels:
        app: jenkinszh
    spec:
      serviceAccount: jenkins
      containers:
      - name: jenkinszh
        # image:  xianchao/jenkins:v1
        # image: jenkinszh/jenkins-k8s:2.204.5
        image: bitnami/jenkins:2.319.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        - containerPort: 50000
          name: agent
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 1000m
            memory: 1Gi
        livenessProbe:
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 5
          failureThreshold: 12
        readinessProbe:
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 5
          failureThreshold: 12
        volumeMounts:
        - name: jenkins-home
          subPath: jenkins-home
          mountPath: /var/jenkins_home
      volumes:
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkinszh
